Fix for bug 183517. Scrolling in mail folder pane requires you wait for the timer to finish. r=varga, sr=alecf, patch by stephend